ip-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-demo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ip-demo
  template:
    metadata:
      labels:
        app: ip-demo
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
