poc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: poc-pod
  labels:
    app: minikube-poc
spec:
  containers:
  - name: web-app
    image: nginx:alpine
    ports:
    - containerPort: 80
